--- a/force-app/main/default/lwc/loginForm/loginForm.html
+++ b/force-app/main/default/lwc/loginForm/loginForm.html
@@ -1,36 +1,60 @@
 <template>
+  <form>
+    <div class="background">
+      <div class="centerBox">
+        <div class="image">
+          <img style="max-height: 130px" src={iconImage} />
+        </div>
 
-    <form>
-
-    <div class = "background">
-
-   <div class = "centerBox">
-    <div class = "image">
-    <img  style="max-height: 130px" src={iconImage} />
+        <div class="center-input">
+          <div class="icon-div">
+            <lightning-icon
+              class="input-icon"
+              icon-name="utility:user"
+              alternative-text="username"
+              size="xx-small"
+            ></lightning-icon>
+          </div>
+          <input
+            type="text"
+            data-id="inputUsername"
+            placeholder="Username"
+            class="slds-input input-element"
+            onchange={handleUserNameChange}
+            required
+          />
+        </div>
+        <div class="center-input">
+          <div class="icon-div">
+            <lightning-icon
+              class="input-icon"
+              icon-name="utility:lock"
+              alternative-text="username"
+              size="xx-small"
+            ></lightning-icon>
+          </div>
+          <input
+            type="password"
+            data-id="inputPassword"
+            placeholder="Password"
+            class="slds-input input-element"
+            onchange={handlePasswordChange}
+            required
+          />
+        </div>
+        <div class="forget-remember-text">
+          <p>Forget Password?</p>
+        </div>
+        <div class="center-button">
+          <button
+            type="submit"
+            class="login-button slds-button"
+            onclick={handleLogin}
+          >
+            LOGIN
+          </button>
+        </div>
+      </div>
     </div>
-
-    <div class ="center-input">         
-            <lightning-icon class="input-icon" icon-name="utility:user" alternative-text="username" size="xx-small"></lightning-icon>
-            <input type="text" data-id="inputUsername" placeholder="Username" class="slds-input input-element" onchange={handleUserNameChange} required />        
-    </div>
-    <div class ="center-input">     
-            <lightning-icon class="input-icon" icon-name="utility:lock" alternative-text="username" size="xx-small"></lightning-icon>
-            <input type="password" data-id="inputPassword" placeholder="Password" class="slds-input input-element" onchange={handlePasswordChange} required/>            
-    </div>
-
-    <div class = "center-button">
-        <button type="submit" class="login-button slds-button" onclick={handleLogin}>LOGIN</button>    
-    </div>
-
-    <div class = "forget-remember-text" >
-        <p >Forget Password? </p>
-    </div>
-
-    
-   </div>
-
-
-    </div>
-
-</form>
+  </form>
 </template>
