--- a/force-app/main/default/lwc/loginForm/loginForm.html
+++ b/force-app/main/default/lwc/loginForm/loginForm.html
@@ -42,8 +42,13 @@
             required
           />
         </div>
-        <div class="forget-remember-text">
-          <p>Forget Password?</p>
+        <div class="container">
+          <div class="forget-text">
+            <p>Rememer me</p>
+          </div>
+          <div class="rememer-me-text">
+            <p>Forget Password?</p>
+          </div>
         </div>
         <div class="center-button">
           <button
